--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,26 @@
 body {
+    width: 100%;
+    height: 100%;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+      background: linear-gradient(-45deg, #32a84e, #1ed6ba, #3269a8);
+      background-size: 400% 8000%;
+      animation: gradient 15s ease infinite;
+}
+  @keyframes gradient {
+      0% {
+          background-position: 0% 50%;
+      }
+      50% {
+          background-position: 100% 50%;
+      }
+      100% {
+          background-position: 0% 50%;
+      }
   }
   
   code {
